project2/test/11711310_test_05.out
Error type 15 at Line 5: redefine struct: Type
