project2/test/11711310_test_05.spl
struct Type {
  char name[32];
};

struct Type {
  int size;
};

int main() {
  struct Type t;
}

